test/templates/should_fail/no_matching_task_name.jst

- name: foo
  after: bar
  cmd: "true"
